2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* keyboard-properties.c: Port to GConf/GNOME 2.0. Many changes.
	(setup_dialog): Use correct widget name
	(create_dialog): Use gtk_image_ functions for the volume icon

2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Make OAF file creation generic

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove support for disabling bonobo-conf build

	* Makefile.am: Change the binary name to
	keyboard-properties-control and create a wrapper script from
	../common/wrapper-script.in to be named keyboard-properties

2001-08-09  Bradford Hovinen  <hovinen@ximian.com>

	* keyboard-properties.xml: Fixed default delay setting

2001-07-31  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): add DISTDIR to install-data-local

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-26  Joakim Ziegler  <joakim@ximian.com>

  * keyboard-properties.glade: Changed the label of the delay slider to be
  more intuitive.

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* keyboard-properties.c (apply_settings): Initialize the other
	fields of this data structure
	(apply_settings): Use lookup table to get the values to put in
	kbdsettings
	(apply_settings): Tweak the numbers a bit

	* Makefile.am (bonobo_sources): Remove bonobo-property-editor-range.[ch]

2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am: remove the OAF_FILE_IN_RULE and copy it here
	(bonobo_sources): add bonobo-properties-editor-range.[ch]

	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here

2001-07-24  Richard Hestilow  <hestilow@ximian.com>
	
	* main.c (main): Pass in legacy files to capplet_init.

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove SUBDIRS
	Remove extraneous EXTRA_DIST
	(EXTRA_DIST): Make sure to include defaults and OAF files
