@@ -3,6 +3,8 @@
 	* keyboard-properties.c: Port to GConf/GNOME 2.0. Many changes.
 	(setup_dialog): Use correct widget name
 	(create_dialog): Use gtk_image_ functions for the volume icon
+	(get_int_from_changeset): Use return value of
+	gconf_change_set_check_value to determine if the key is in the set
 
 2001-10-12  Bradford Hovinen  <hovinen@ximian.com>
 
